@startuml
'left to right direction

class AuthController {
    +UserAccessInfo login(String username, String password);
}

interface IAuthService {
    +UserAccessInfo authorizeUser(String username, String password)
}

AuthController --> IAuthService: -authService

class AuthService {
    +UserAccessInfo authorizeUser(String username, String password)
}
IAuthService <|.. AuthService

interface AuthPort {
    +String getToken(String username, String password)
    +UserAccessInfo getRole(String username, String token)
}

AuthService --> AuthPort: -authPort

class AuthPortWireMock {
    +String getToken(String username, String password)
    +UserAccessInfo getRole(String username, String token)
}

AuthPort <|.. AuthPortWireMock

class UserAccessInfo {
    +@JsonIgnore boolean access;
    +String role;
}

AuthService --> UserAccessInfo

@enduml
